# numopt

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
docs/: CMakeLists.txt  Doxyfile.in  conf.py  index.md  index.rst
include/numopt/: CMakeLists.txt
include/numopt/base/: constants.h  types.h
include/numopt/problems/: functor.h  functors.h  paraboloidFunctor.h  paraboloidProblem.h  problem.h  rosenbrock2dProblem.h  rosenbrockFunctor.h
include/numopt/solvers/: armijoLineSearch.h  gradientDescent.h  solver.h  solverData.h  solverSettings.h
include/numopt/solvers/linesearch/: backtrackingLineSearch.h  linesearchSettings.h  strongWolfeLineSearch.h
src/: CMakeLists.txt  main.cpp
src/base/: types.h
src/problems/: functor.h  paraboloidFunctor.h  paraboloidProblem.h  problem.h  rosenbrock2dProblem.h  rosenbrockFunctor.h
src/solvers/: armijoLineSearch.h  gradientDescent.h  solver.h  solverData.h
tests/: CMakeLists.txt  CMakeLists.txt.in  autoDiffTest.cpp  gradientDescentTest.cpp  sampleTest.cpp  sampleTests.cpp
