target_include_directories("${PROJECT_NAME}UnitTests" PUBLIC  ${CMAKE_CURRENT_SOURCE_DIR})
FILE(GLOB_RECURSE SOURCES *.cpp)
target_sources("${PROJECT_NAME}UnitTests" PUBLIC ${SOURCES})
target_link_libraries("${PROJECT_NAME}UnitTests" gtest gtest_main)
add_test( "${PROJECT_NAME}UnitTests" "${PROJECT_NAME}UnitTests" )